<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.etechoracio.boaviagem.ViagemActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/azul"
            android:orientation="vertical">

            <TextView
                style="@style/titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/novaViagem" />

        </LinearLayout>

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1">

            <TextView android:text="@string/destino" />

            <EditText
                android:id="@+id/editDestino"
                android:inputType="text"/>

            <TextView android:text="@string/tipoViagem"/>

            <RadioGroup
                android:id="@+id/radioTipo"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioLazer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/lazer"/>

                <RadioButton
                    android:id="@+id/radioNegocio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="130dp"
                    android:text="@string/negocios"/>

            </RadioGroup>

            <TableRow>

                <TextView
                    android:layout_gravity="center"
                    android:text="@string/dataChegada"/>

                <TextView
                    android:layout_gravity="center"
                    android:text="@string/dataSaida"/>

            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btnDataChegada"
                    android:onClick="onSelecionarData"
                    android:text="@string/selecione" />

                <Button
                    android:id="@+id/btnDataSaida"
                    android:onClick="onSelecionarData"
                    android:text="@string/selecione" />

            </TableRow>

            <TextView android:text="@string/orcamento"/>

            <EditText
                android:id="@+id/editOrcamento"
                android:inputType="numberDecimal"/>


            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/quantidadedePessoas"/>

                <EditText
                    android:id="@+id/editQuantidadePessoas"
                    android:inputType="number"/>

            </TableRow>

            <Button
                android:onClick="onSalvar"
                android:text="@string/salvar" />

        </TableLayout>

    </LinearLayout>


</ScrollView>